--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,21 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  position: relative;
+  z-index: 1;
   /* выше установили ограничения для секции */
 }
 
+.logo_place_header{
+width: 228px;
+height: 32px;
+background-image: url(../images/logo_place_header.svg);
+background-size: cover;
+position:absolute;
+top: 30px;
+left: 64px;
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
