--- a/styles/style.css
+++ b/styles/style.css
@@ -35,28 +35,82 @@ left: 64px;
 
 .header__title{
   width: 730px;
-  position:absolute;
-  left: 64px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  display: flex;
+  margin: auto;
+  margin-left: 64px;
+
+  
 }
 
-.header__main-illustration{
-  wmin-height: 600px;
-  max-height: 756px;
-  position: absolute;
-
-}
 .header__subtitle{
+  width: 388px;
   position: absolute;
   left: 64px;
   bottom: 30px;
+  z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__main-illustration{
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+}
+.content{
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+.description{
+  padding-top:100px;
+  margin:0 auto;
+  display:flex;
+  justify-content: center;
 }
 
+.two-columns{
+  display: flex;
+  justify-content: space-between;
+  width: 80%; 
+}
+
+.two-columns__brief{
+  margin: 0;
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+.two-columns__main-text{
+  width: 80%; 
+  min-width: 784px;
+  margin: 0 0 30px 0;
+}
+.two-columns__paragraph{
+  margin:0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;  
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
