--- a/styles/style.css
+++ b/styles/style.css
@@ -70,9 +70,7 @@ left: 64px;
   width: 568px;
   background-color: #2f80ed;
 }
-.content{
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+
 .description{
   padding-top:100px;
   margin:0 auto;
@@ -97,10 +95,10 @@ left: 64px;
 .two-columns__main-text{
   width: 80%; 
   min-width: 784px;
-  margin: 0 0 30px 0;
+  
 }
 .two-columns__paragraph{
-  margin:0;
+  margin:0 0 30px 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -111,10 +109,218 @@ left: 64px;
   font-size: 24px;
   font-weight: 600;  
 }
+
+.digits{
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.section-title{
+  width: 60%;
+  margin: 0 auto;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  
+}
+
+.section-subtitle{
+  width: 60%;
+  margin: 0 auto;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin-top: 20px;
+  
+}
+
+.table{
+  list-style: none;
+  width: 1100px;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell{
+  width: 250px;
+}
+
+.table_cell_theme_white{
+  margin: 60px 0 0 0;
+}
+
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+  margin-top: 20px;
+}
+
+.feynman{
+  height: 890px;
+  position: relative;
+  z-index: 1;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feynman__title{
+  padding-top: 100px;
+  margin: 0;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  z-index: 1;
+}
+
+.feynman__subtitle{
+  margin: 0;
+  padding-top:70px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 2;
+}
+
+.feynman__link{
+  position: absolute;
+  top:50%;
+  right: 48px;
+  line-height: 36px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.feynman__illustration{
+  margin: 0;
+  padding: 0;
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.kaufman{
+  background-color: #1f1f1f;
+  color:white;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 3;
+}
+
+.kaufman__triangle{
+  position: absolute;
+  top:0;
+  right: -210px;
+  background-size: cover;
+  width: 877px;
+  height: 877px;
+  z-index: 1;
+} 
+
+.footer{
+  background-color: #1f1f1f;
+  color: white;
+  display: flex;
+  justify-content: center;
+  min-height: 350px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer__columns {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 0;
+}
+
+.logo__place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  background-size: cover;
+  width: 228px;
+  height: 32px;
+ 
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  margin-bottom: 18px;
+  margin-top: 18px;  
+}
+.footer__column-links{
+  text-decoration: none;
+  list-style-type: none;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  padding: 0;
+}
+
+.footer__column-link{
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
 }
