--- a/styles/style.css
+++ b/styles/style.css
@@ -16,24 +16,23 @@
   background-color: #f2f2f2;
   position: relative;
   z-index: 1;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: flex-end;
-
   /* выше установили ограничения для секции */
 }
 
-.logo{
-width: 228px;
-height: 32px;
-background-image: url(../images/logo_place_header.svg);
-background-size: cover;
-position:absolute;
-top: 30px;
-left: 64px;
+.logo_place_header {
+  width: 228px;
+  height: 32px;
+  background-image: url(../images/logo_place_header.svg);
+  background-size: cover;
+  position: absolute;
+  top: 30px;
+  left: 64px;
 }
 
-.header__title{
+.header__title {
   width: 730px;
   line-height: 96px;
   font-size: 102px;
@@ -41,11 +40,9 @@ left: 64px;
   display: flex;
   margin: auto;
   margin-left: 64px;
-
-  
 }
 
-.header__subtitle{
+.header__subtitle {
   width: 388px;
   position: absolute;
   left: 64px;
@@ -56,14 +53,13 @@ left: 64px;
   font-weight: normal;
 }
 
-.header__main-illustration{
+.header__main-illustration {
   width: 765px;
   height: 608px;
   position: absolute;
   right: 0;
   bottom: 0;
 }
-
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
@@ -71,20 +67,20 @@ left: 64px;
   background-color: #2f80ed;
 }
 
-.description{
-  padding-top:100px;
-  margin:0 auto;
-  display:flex;
+.description {
+  padding-top: 100px;
+  margin: 0 auto;
+  display: flex;
   justify-content: center;
 }
 
-.two-columns{
+.two-columns {
   display: flex;
   justify-content: space-between;
-  width: 80%; 
+  width: 80%;
 }
 
-.two-columns__brief{
+.two-columns__brief {
   margin: 0;
   width: 175px;
   line-height: 1.2;
@@ -92,40 +88,42 @@ left: 64px;
   font-weight: normal;
   color: #2f80ed;
 }
-.two-columns__main-text{
-  width: 80%; 
+
+.two-columns__main-text {
+  width: 80%;
   min-width: 784px;
-  
 }
-.two-columns__paragraph{
-  margin:0 0 30px 0;
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 
-.two-columns__span-accent{
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
-  font-weight: 600;  
+  font-weight: 600;
+  color: #2f80ed;
 }
 
-.digits{
+.digits {
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.section-title{
+.section-title {
   width: 60%;
   margin: 0 auto;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
   text-align: center;
-  
+
 }
 
-.section-subtitle{
+.section-subtitle {
   width: 60%;
   margin: 0 auto;
   line-height: 34px;
@@ -133,10 +131,10 @@ left: 64px;
   font-weight: normal;
   text-align: center;
   margin-top: 20px;
-  
+
 }
 
-.table{
+.table {
   list-style: none;
   width: 1100px;
   margin: auto;
@@ -146,15 +144,15 @@ left: 64px;
   flex-wrap: wrap;
 }
 
-.table__cell{
+.table__cell {
   width: 250px;
 }
 
-.table_cell_theme_white{
+.table__cell_theme_white {
   margin: 60px 0 0 0;
 }
 
-.table__heading{
+.table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
@@ -163,7 +161,7 @@ left: 64px;
   margin-bottom: 20px;
 }
 
-.table__text{
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -172,7 +170,7 @@ left: 64px;
   margin-top: 20px;
 }
 
-.feynman{
+.feynman {
   height: 890px;
   position: relative;
   z-index: 1;
@@ -182,7 +180,7 @@ left: 64px;
   align-items: center;
 }
 
-.feynman__title{
+.feynman__title {
   padding-top: 100px;
   margin: 0;
   width: 648px;
@@ -193,18 +191,18 @@ left: 64px;
   z-index: 1;
 }
 
-.feynman__subtitle{
+.feynman__subtitle {
   margin: 0;
-  padding-top:70px;
+  padding-top: 70px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   z-index: 2;
 }
 
-.feynman__link{
+.feynman__link {
   position: absolute;
-  top:50%;
+  top: 50%;
   right: 48px;
   line-height: 36px;
   font-size: 36px;
@@ -212,7 +210,7 @@ left: 64px;
   color: #2f80ed;
 }
 
-.feynman__illustration{
+.feynman__illustration {
   margin: 0;
   padding: 0;
   width: 867px;
@@ -222,14 +220,14 @@ left: 64px;
   bottom: 0;
 }
 
-.kaufman{
+.kaufman {
   background-color: #1f1f1f;
-  color:white;
+  color: white;
   padding-top: 90px;
   padding-bottom: 90px;
   position: relative;
   overflow: hidden;
-  
+
 }
 
 
@@ -242,17 +240,17 @@ left: 64px;
   z-index: 3;
 }
 
-.kaufman__triangle{
+.kaufman__triangle {
   position: absolute;
-  top:0;
+  top: 0;
   right: -210px;
   background-size: cover;
   width: 877px;
   height: 877px;
   z-index: 1;
-} 
+}
 
-.footer{
+.footer {
   background-color: #1f1f1f;
   color: white;
   display: flex;
@@ -287,16 +285,16 @@ left: 64px;
   background-size: cover;
   width: 228px;
   height: 32px;
- 
 }
 
 .footer__author {
   line-height: 25px;
   font-size: 18px;
   margin-bottom: 18px;
-  margin-top: 18px;  
+  margin-top: 18px;
 }
-.footer__column-links{
+
+.footer__column-links {
   text-decoration: none;
   list-style-type: none;
   margin-top: 20px;
@@ -304,7 +302,7 @@ left: 64px;
   padding: 0;
 }
 
-.footer__column-link{
+.footer__column-link {
   color: white;
   line-height: 30px;
   font-size: 18px;
@@ -312,14 +310,14 @@ left: 64px;
   text-decoration: none;
 }
 
-.footer__column-heading{
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
   margin: 0;
 }
 
-.footer__social-icon{
+.footer__social-icon {
   width: 16px;
   height: 16px;
   padding-right: 10px;
