--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@
 }
 
 .header__subtitle {
+  margin: 0;
   width: 388px;
   position: absolute;
   left: 64px;
@@ -51,6 +52,11 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -99,6 +105,10 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
 }
 
 .two-columns__span-accent {
@@ -171,7 +181,7 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   position: relative;
   z-index: 1;
   background-color: #f2f2f2;
@@ -208,6 +218,7 @@
   font-size: 36px;
   font-weight: normal;
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .feynman__illustration {
@@ -248,9 +259,11 @@
   width: 877px;
   height: 877px;
   z-index: 1;
+  background-image: url(../images/kaufman-triangle.svg);
 }
 
 .footer {
+  box-sizing: border-box;
   background-color: #1f1f1f;
   color: white;
   display: flex;
