--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+from {
+  transform: rotate(0deg);
+}
+to {
+  transform: rotate(360deg);
+}
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -19,6 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -40,7 +50,7 @@
   display: flex;
   margin: auto;
   margin-left: 64px;
-  z-index: 3;
+  z-index: 4;
 }
 
 .header__subtitle {
@@ -49,7 +59,7 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
-  z-index: 2;
+  z-index: 3;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -58,6 +68,13 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: background-color 1s linear 2s;
+
+}
+
+.header__link:hover {
+  color: #2f80ed;
+  opacity: 80%;
 }
 
 .header__main-illustration {
@@ -66,12 +83,14 @@
   position: absolute;
   right: 0;
   bottom: 0;
+  z-index: 2;
 }
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  animation: rotation 20s linear infinite;
 }
 
 .description {
@@ -116,6 +135,76 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
+}
+
+.techniques {
+  width: 80%;
+  padding-top: 100px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.cards {
+  width: 920px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0 100px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.cards__item {
+  width: 240px;
+  margin: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  margin: 60px 40px 43px 40px;
+  border-radius: 80px;
+}
+
+.cards__title {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 16px 0;
+}
+
+.cards__description {
+  line-height: 24px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+}
+
+.video {
+  padding-top: 100px;
+}
+
+.iframe_section_video {
+  display: flex;
+  justify-content: center;
+  gap: 0 20px;
+  padding-top: 50px;
+}
+
+.video__iframe {
+  position: relative;
+  bottom: -50px;
+  border: 0;
+}
+
+.oakley {
+  padding-top: 100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
 }
 
 .digits {
@@ -178,6 +267,85 @@
   margin-top: 20px;
 }
 
+.khan {
+  min-width: 80%;
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+  padding-top: 105px;
+}
+
+.khan__container {
+  width: 80%;
+}
+
+.khan__author {
+  margin: 0 auto;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0 auto;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 50px 0 0 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__quote-author {
+  margin: 36px 0 0 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 0 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+
+}
+
+.khan__book-container {
+  margin: 68px 0 0 0;
+  position: relative;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: 0 0;
+  vertical-align: bottom;
+}
+
+.khan__buy-link {
+  position: absolute;
+  top: 0;
+  left: 668px;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+  transition: background-color 1s linear 2s;
+}
+
+.khan__buy-link:hover {
+  color: #2f80ed;
+  opacity: 80%;
+}
+
 .feynman {
   min-height: 890px;
   position: relative;
@@ -217,6 +385,12 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+  transition: background-color 1s linear 2s;
+}
+
+.feynman__link:hover {
+  color: #2f80ed;
+  opacity: 80%;
 }
 
 .feynman__illustration {
@@ -255,6 +429,32 @@
   height: 877px;
   z-index: 1;
   background-image: url(../images/kaufman-triangle.svg);
+  animation: rotation 20s linear infinite;
+}
+
+.resources {
+  padding-top: 100px;
+}
+.resources__logo_zone {
+  width: 1100px;
+  margin: 0 auto;
+  padding-bottom: 100px;
+  padding-top: 80px;
+}
+
+.resources__link {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  transition: bacrground-color 1s linear 2s;
+}
+
+.resources__logo:hover {
+  opacity: 80%;
 }
 
 .footer {
@@ -316,6 +516,12 @@
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
+  transition: background-color 1s linear 2s;
+}
+
+.footer__column-link:hover {
+  color: white;
+  opacity: 80%;
 }
 
 .footer__column-heading {
@@ -329,4 +535,9 @@
   width: 16px;
   height: 16px;
   padding-right: 10px;
+  transition: background-color 1s linear 2s;
+}
+
+.footer__social-icon:hover {
+  opacity: 80%;
 }
