--- a/blocks/logo/_place/logo_place_footer.css
+++ b/blocks/logo/_place/logo_place_footer.css
@@ -1,4 +1,4 @@
-.footer__logo {
+.logo_place_footer {
   background-image: url(../../../images/logo_place_footer.svg);
   background-size: cover;
   width: 228px;
