--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,4 +1,4 @@
-.header__logo {
+.logo_place_header {
   width: 228px;
   height: 32px;
   background-image: url(../../../images/logo_place_header.svg);
